--- a/rap_app_project/rap_app/templates/users/login.html
+++ b/rap_app_project/rap_app/templates/users/login.html
@@ -16,7 +16,7 @@
         Mot de passe oublié ? <a href="{% url 'password_reset' %}">Réinitialiser ici</a>.
     </p>
     <p class="mt-2">
-        Pas encore de compte ? <a href="{% url 'register' %}">Inscrivez-vous</a>.
+        Pas encore de compte ? Demandez à votre admninistrateur de vous inscrire !
     </p>
 </div>
 {% endblock %}
